--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,9 +7,10 @@
 //$blue: #4183C4;
 $blue: #8ab4f8;
 //$background: #333; 
-$background: #1b1b1b; //mozilla background
+//$background: #1b1b1b; //mozilla background
+$background: #22272e; //github background
 //$footer: #1f1e1e;
-$footer: #0f0e0e;
+$footer: #1a1a1a;
 
 // Grays
 $black: #000;
